1999-03-09 Sergey Panov <sipan@mit.edu>

        * ru.po: update from Valek Filippov <val@comptek.ru> 

1999-02-04  Chris Lahey  <clahey@umich.edu>

	* POTFILES.in: Moved spell from editor-plugins/spell/ to
	editor-plugins/.

1999-02-03  Chris Lahey  <clahey@umich.edu>

	* POTFILES.in: Replaced plugins with either editor-plugins or
	gmodule-plugins, depending on the new location of the plugin.

1999-01-17  Arturo Espinosa <arturo@nuclecu.unam.mx>

	* POTFILES.in: removed src/msgbox.c

1998-11-29  Fred Leeflang <fredl@dutchie.org>

	* nl.po: Added, Dutch Translation

1998-10-18  Martin Baulig  <martin@home-of-linux.org>

	* *.po: Updated.

	* de.po: Updated German translation.

1998-10-13  Martin Baulig  <martin@home-of-linux.org>

	* *.po: Updated.

	* de.po: Updated German translation.

1998-08-27  Martin Baulig  <martin@home-of-linux.org>

	* *.po: Updated.

1998-08-19  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* pt.po: Updated.

1998-08-17  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* POTFILES.in: Removed a little bunch of missing files from POTFILES.in.

1998-08-16  Martin Baulig  <martin@home-of-linux.org>

	* de.po: Updated German translation.

1998-07-29  Martin Baulig  <martin@home-of-linux.org>

	* POTFILES.in: Removed `gdiskfree/error.c'.

1998-07-23  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* pt.po: Updated Portuguese translation.

	* POTFILES.in: Added gncal-todo.c

Sun Jul 19 23:49:51 1998  Tom Tromey  <tromey@cygnus.com>

	* fr.po: Removed spurious \n.

Thu, 16 Jul 1998 19:31:38 +0200  [Vincent]

	* Added many files to POTFILES.in
	gedit/menus.c gedit/toolbar.c mini-utils/gless/gless.c
	mini-utils/gnome-run/gnome-run.c mini-utils/guname/guname.c
	mini-utils/guname/info.c mini-utils/guname/moreinfo.c
	mini-utils/gw/gw.c gstripchart/gstripchart.c gdiskfree/df.c
	gdiskfree/error.c edit-menus/edit-menus.c
	* Updated fr.po accordingly.

1998-07-01  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* pt.po: Added Portuguese translation.
