@@ -1,12 +1,11 @@
-editor-plugins/cvsdiff.c
-editor-plugins/diff.c
-editor-plugins/email.c
-editor-plugins/convert.c
-editor-plugins/httpview.c
-editor-plugins/browse.c
-editor-plugins/prm/maincode.c
-editor-plugins/prm/msgbox.c
-editor-plugins/spell.c
+gmodule-plugins/cvsdiff/cvsdiff.c
+gmodule-plugins/diff/diff.c
+gmodule-plugins/email/email.c
+gmodule-plugins/convert/convert.c
+gmodule-plugins/browse/browse.c
+gmodule-plugins/prm/maincode.c
+gmodule-plugins/prm/msgbox.c
+gmodule-plugins/spell/spell.c
 gmodule-plugins/launcher/main.c
 gmodule-plugins/shell/main.c
 src/commands.c
