@@ -1,3 +1,9 @@
+1999-03-10  Kjartan Maraas  <kmaraas@fib.hl.no>
+
+	* POTFILES.in: s/editor-plugins/gmodule-plugins
+	
+	* no.po: Updated.
+	
 1999-03-09 Sergey Panov <sipan@mit.edu>
 
         * ru.po: update from Valek Filippov <val@comptek.ru> 
